Fix(ChatCutting): fix when sending a huge message, get cut off

--- a/components/tailored/messaging/message/Message.less
+++ b/components/tailored/messaging/message/Message.less
@@ -42,8 +42,9 @@
     }
   }
 
-  .message-container{
+  .message-container {
     position: relative;
+    word-break: break-word;
   }
 
   .message-hover {
